# pactfmt

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml  deploy-docs.yml
crates/format/: Cargo.toml
crates/format/src/: format.rs  lib.rs
crates/format/tests/: tests.rs
crates/formatter/: Cargo.toml
crates/formatter/src/: format_doc.rs  format_tree.rs  lib.rs  lower_cst.rs  lower_tree.rs
crates/formatter/tests/: tests.rs
crates/syntax/: Cargo.toml
crates/test-utils/: Cargo.toml
docs/: index.html  package.json
fixtures/: defcap_multiline.pact  defcap_singleline.pact  defun.pact  defun_multiline.pact  defun_singleline.pact  module_basic.pact
lib/: Cargo.toml
lib/benches/: benchmark.rs
lib/src/: lexer.rs  syntax.rs
macros/: Cargo.toml
macros/src/: lib.rs
reference/: README.md  pact.ungram  parser.y
src/: cst.rs  format.rs  lexer.rs  main.rs  parser.rs  pretty.rs
src/snapshots/: pactfmt__format__tests__defun_multiline-2.snap  pactfmt__format__tests__defun_multiline.snap  pactfmt__format__tests__defun_singleline-2.snap  pactfmt__format__tests__defun_singleline.snap  pactfmt__format__tests__lists-2.snap  pactfmt__format__tests__lists.snap  pactfmt__format__tests__objects-2.snap  pactfmt__format__tests__objects.snap  pactfmt__pretty__tests__defcap_multiline.snap  pactfmt__pretty__tests__defcap_singleline.snap  pactfmt__pretty__tests__defun.snap  pactfmt__pretty__tests__defun_multiline.snap  pactfmt__pretty__tests__defun_singleline.snap  pactfmt__pretty__tests__module_basic.snap  pactfmt__pretty__tests__module_basic.snap.new
(+56 files in other folders)
