[workspace]
members = [
    "crates/formatter",
    "crates/syntax",
    "crates/test-utils",
    "docs/src/wasm",
]

[package]
name = "pactfmt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
formatter = { path = "crates/formatter" }
syntax = { path = "crates/syntax" }
